--- a/Theme.css
+++ b/Theme.css
@@ -20,12 +20,12 @@
   --sidebar-opacity: 0.4;
   --main-content-color: rgba(var(--main-rgb), var(--main-content-opacity));
   --sidebar-color: rgba(var(--main-rgb), var(--sidebar-opacity));
-  --accent-hue: 156;
-  --accent-saturation: 77.5%;
+  --accent-hue: 270;
+  --accent-saturation: 100%;
   --accent-lightness: 50%;
   --accent-hsl: var(--accent-hue),calc(var(--accent-saturation) * var(--saturation-factor)),var(--accent-lightness);
-  --accent-opacity: 0;
-  --accent-text-color: #ffffff;
+  --accent-opacity: 1;
+  --accent-text-color: rgb(255, 255, 255);
   --alert-hue: 359;
   --alert-saturation: 66.7%;
   --alert-lightness: 54.1%;
@@ -206,7 +206,7 @@ body {
 .winButton__421ed {
   height: 100%;
   top: 0;
-  color: #fff;
+  color: #ffffff15;
 }
 
 .platform-osx .wrapper_ef3116 {
