--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -1,9 +1,9 @@
 .modeSelected__2ea32 a.link__2ea32,
 .modeSelected__2ea32.typeThread__2ea32 .link__2ea32 {
-  background-color: rgba(148, 0, 234, 0.724);
+    background: linear-gradient(360deg, rgb(78, 0, 123) 20%, rgb(122, 0, 193) 65%);
 
   &:hover {
-    background-color: rgba(148, 0, 234, 0.473);
+    box-shadow: 0px 0px 15px rgb(255, 255, 255);
   }
 
   /* blurple channels */
@@ -23,11 +23,30 @@
         border-radius: 12px 0 0 12px;
 
         &.selected_b3f026 {
-          background-color: rgba(148, 0, 234, 0.724);
+         background-color: rgba(78, 0, 123, 0.628);
+         position: relative;
+         box-shadow: 3px 3px 10px rgba(24, 24, 24, 0.374);
+         z-index: 1; /* Διασφαλίζει ότι το κείμενο είναι πάνω από το gradient */
+         overflow: hidden; /* Κρύβει τα τυχόν εκτός ορίων στοιχεία */
+         backdrop-filter: blur(10px); /* Γυαλιστερό αποτέλεσμα */
         }
-      }
+
+        &.selected_b3f026::before {
+         content: "";
+         position: absolute;
+         inset: 0;
+         background: linear-gradient(360deg, rgb(78, 0, 123) 20%, rgb(122, 0, 193) 65%);
+         pointer-events: none;
+         z-index: -1; /* Τοποθετεί το gradient πίσω από το κείμενο */
+         filter: blur(4px); /* Δημιουργεί μια θολούρα για να ενισχύσει το γυαλιστερό αποτέλεσμα */
+        }
+
+        &.selected_b3f026:hover {
+         box-shadow: 0px 0px 13px rgba(255, 255, 255, 0.58);
+        }        
+        }
+        }
     }
-  }
 
   /* makes sidebar big, adds channel styling */
   .searchBar_c7e907 {
