--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -2,20 +2,21 @@
 .modeSelected__2ea32 a.link__2ea32,
 .modeSelected__2ea32.typeThread__2ea32 .link__2ea32 {
 
-         background: linear-gradient(360deg, rgb(53, 0, 83) 25%, rgba(104, 0, 164, 0.779) 65%);
+         background: linear-gradient(360deg, rgba(42, 44, 48, 0.779) 25%, rgba(70, 73, 81, 0.779) 65%);
          position: relative;
-         box-shadow: -5px 7px 9px rgb(24, 24, 24);
+         box-shadow: -2px 5px 10px rgb(24, 24, 24);
          z-index: 1; /* Διασφαλίζει ότι το κείμενο είναι πάνω από το gradient */
          overflow: hidden; /* Κρύβει τα τυχόν εκτός ορίων στοιχεία */
          backdrop-filter: blur(55px);
+         filter:brightness(107%);
     
         &:hover {
-        background: linear-gradient(360deg, rgb(53, 0, 83) 25%, rgba(104, 0, 164, 0.779) 65%);
+        background: linear-gradient(360deg, rgba(42, 44, 48, 0.779) 25%, rgba(70, 73, 81, 0.779) 65%);
         position: relative;
-        box-shadow: -5px 7px 9px rgb(24, 24, 24);
+        box-shadow: -6px 7px 9px rgb(24, 24, 24);
         z-index: 1; /* Διασφαλίζει ότι το κείμενο είναι πάνω από το gradient */
         overflow: hidden; /* Κρύβει τα τυχόν εκτός ορίων στοιχεία */
-        filter:brightness(130%);
+        filter:brightness(100%);
         }
 }
 
@@ -30,21 +31,23 @@
       padding: 15px 0 7px 15px;
 
       .item_b3f026 {
-        padding: 11px 10px;
-        border-radius: 10px 0 0 12px;
+        padding: 8px 10px;
+        border-radius: 15px;
 
         &.selected_b3f026 {
 
-         background: linear-gradient(360deg, rgb(53, 0, 83) 25%, rgba(104, 0, 164, 0.779) 65%);
+         background: linear-gradient(360deg, rgba(42, 44, 48, 0.779) 25%, rgba(70, 73, 81, 0.779) 65%);
          position: relative;
-         box-shadow: -5px 7px 9px rgb(24, 24, 24);
+         box-shadow: -7px 5px 12px rgba(0, 0, 0, 0.584);
          z-index: 1; /* Διασφαλίζει ότι το κείμενο είναι πάνω από το gradient */
          overflow: hidden; /* Κρύβει τα τυχόν εκτός ορίων στοιχεία */
+         color: rgb(255, 255, 255);
          backdrop-filter: blur(75px);
+         filter:brightness(107%);
         }
         
         &.selected_b3f026:hover {
-         filter:brightness(110%);
+         filter:brightness(100%);
         }        
         }
         }
@@ -52,11 +55,12 @@
 
   /* makes sidebar big, adds channel styling */
   .searchBar_c7e907 {
+    border-radius: 15px;
     margin-right: 1px;
-    box-shadow: -5px 7px 9px rgb(24, 24, 24);
-    background: linear-gradient(360deg, rgba(44, 44, 44, 0.868) 20%, rgb(65, 65, 65) 65%);   
+    box-shadow: -7px 5px 12px rgba(0, 0, 0, 0.584);
+    background: linear-gradient(360deg, rgba(42, 44, 48, 0.779) 25%, rgba(70, 73, 81, 0.779) 65%);  
     }
-
+    
   .mask__68edb {
     height: 100px;
     contain: none;
