--- a/Theme.css
+++ b/Theme.css
@@ -1,5 +1,5 @@
 :root {
-  --app-bg: url(https://cdn.discordapp.com/attachments/1335911980141379614/1336326853031497820/brushed_steel_windows_8_wallpaper__white_by_fuller1754-d58wtvs.png?ex=67ab4fdd&is=67a9fe5d&hm=8fac4e016ebd8b0f47f32e70255d413f75824518645d3e1a9b347a9a7be05933&);
+  --app-bg: url(https://cdn.discordapp.com/attachments/1335911980141379614/1336326914905735231/WP_Damhalla_I-2560x1440_00000.jpg?ex=67b095ec&is=67af446c&hm=7a68ec2f149c04028af48ab3713c3527d2724c86a3d9dac170647f82c2e88426&);
   --app-blur: 6px;
   --app-margin: 24px;
   --app-radius: 10px;
