--- a/Theme.css
+++ b/Theme.css
@@ -6,7 +6,7 @@
 */
 
 :root {
-  --app-bg: url(https://i.imgur.com/bgmVeyt.jpg);
+  --app-bg: url(https://cdn.discordapp.com/attachments/1335911980141379614/1336326914905735231/WP_Damhalla_I-2560x1440_00000.jpg?ex=67b1e76c&is=67b095ec&hm=fae625d6d200c60c48a2837617e6ead64d48ff6d2064cbbe099860d5e2d8040b&);
   --app-blur: 6px;
   --app-margin: 24px;
   --app-radius: 10px;
