--- a/Theme.css
+++ b/Theme.css
@@ -19,7 +19,7 @@
   --accent-saturation: 77.5%;
   --accent-lightness: 47.1%;
   --accent-opacity: 1;
-  --accent-text-color: #000;
+  --accent-text-color: #ffffff;
   --alert-hue: 359;
   --alert-saturation: 66.7%;
   --alert-lightness: 54.1%;
@@ -44,7 +44,7 @@
   --reply-opacity: 1;
   --notification-color: #fff;
   --list-item-radius: var(--app-radius);
-  --textarea-color: 255,255,255;
+  --textarea-color: rgba(255,255,255);
   --textarea-alpha: 0.1;
   --textarea-alpha-focus: 0.15;
   --textarea-text-color: #fff;
@@ -62,21 +62,21 @@
   --button-height: 32px;
   --button-padding: 0 16px;
   --button-color: hsla(var(--accent-hsl),var(--accent-opacity));
-  --button-action-color: #000;
+  --button-action-color: #ffffff;
   --button-text-color: var(--accent-text-color);
   --button-radius: 16px;
   --switch-slider-color: hsla(218,4.6%,46.9%,0.85);
   --switch-knob-color: hsl(0,0%,13%);
   --popout-color: rgba(0,0,0,0.55);
   --popout-blur: 8px;
-  --popout-header-opacity: 0.3;
+  --popout-header-opacity: 0.5;
   --popout-header-shadow: 0px 3px 9px 0px rgba(0,0,0,0.25);
   --popout-radius: var(--app-radius);
   --popout-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2);
   --nowplaying-color: 88,101,242;
   --streaming-color: 89,54,149;
   --spotify-color: 29,185,84;
-  --server-folder-color: rgba(255,255,255,0.1);
+  --server-folder-color: rgba(255, 255, 255, 0.993);
   --supporter-color: hsla(var(--accent-hsl),var(--accent-opacity));
   --tooltip-color: hsla(var(--accent-hsl),var(--accent-opacity));
   --tooltip-text-color: var(--accent-text-color);
