--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -5,7 +5,7 @@
   border-radius: 10px;
   box-shadow: -2px 5px 10px rgb(24, 24, 24);
   border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
-  color:  var(--textarea-color);
+  color:  white;
 }
 [class*="vc-addon-card"] {
   background: var(--Card-Boxes-Color);
@@ -14,7 +14,7 @@
   border-radius: 10px;
   box-shadow: -2px 5px 10px rgb(24, 24, 24);
   border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
-  color:  var(--textarea-color);
+  color:  white;
 }
 
 [class*="vc-settings-card cardPrimary__73069 card__73069"] {
@@ -24,7 +24,7 @@
   border-radius: 10px;
   box-shadow: -2px 5px 10px rgb(24, 24, 24);
   border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
-  color:  var(--textarea-color);
+  color:  white;
 }
 
 [class*="vc-settings-tab-bar top_b3f026"] {
@@ -34,7 +34,7 @@
   border-radius: 10px;
   box-shadow: -2px 5px 10px rgb(24, 24, 24);
   border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
-  color:  var(--textarea-color);
+  color:  white;
 }
 
 [class*="vc-plugins-info-card cardPrimary__73069 card__73069"] {
@@ -43,7 +43,7 @@
   border-style: inset;
   box-shadow: -2px 5px 10px rgb(24, 24, 24);
   border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
-  color:  var(--textarea-color);
+  color:  white;
 }
 
 .theme-dark .button__201d5.lookFilled__201d5.colorBrand__201d5, .theme-dark .button__201d5.lookFilled__201d5.colorGreen__201d5, .theme-dark .button__201d5.lookFilled__201d5.colorBrandNew__8872c {
@@ -52,82 +52,68 @@
   border-style: inset;
   box-shadow: -2px 5px 10px rgb(24, 24, 24);
   border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
-  color:  var(--textarea-color);
+  color:  white;
 }
 /* Channels Color */
 .modeSelected__2ea32 a.link__2ea32,
 .modeSelected__2ea32.typeThread__2ea32 .link__2ea32 {
 
-         background: linear-gradient(360deg, rgba(42, 44, 48, 0.779) 25%, rgba(70, 73, 81, 0.779) 65%);
-         position: relative;
-         box-shadow: -2px 5px 10px rgb(24, 24, 24);
-         z-index: 1; /* Διασφαλίζει ότι το κείμενο είναι πάνω από το gradient */
-         overflow: hidden; /* Κρύβει τα τυχόν εκτός ορίων στοιχεία */
-         backdrop-filter: blur(55px);
-         filter:brightness(107%);
-    
-        &:hover {
-        background: linear-gradient(360deg, rgba(42, 44, 48, 0.779) 25%, rgba(70, 73, 81, 0.779) 65%);
-        position: relative;
-        box-shadow: -6px 7px 9px rgb(24, 24, 24);
-        z-index: 1; /* Διασφαλίζει ότι το κείμενο είναι πάνω από το gradient */
-        overflow: hidden; /* Κρύβει τα τυχόν εκτός ορίων στοιχεία */
-        filter:brightness(100%);
-        }
+  background: linear-gradient(360deg, rgba(42, 44, 48, 0.779) 25%, rgba(70, 73, 81, 0.779) 65%);
+  position: relative;
+  box-shadow: -2px 5px 10px rgb(24, 24, 24);
+  z-index: 1; /* Διασφαλίζει ότι το κείμενο είναι πάνω από το gradient */
+  overflow: hidden; /* Κρύβει τα τυχόν εκτός ορίων στοιχεία */
+  backdrop-filter: blur(55px);
+  filter:brightness(107%);
+  
+  &:hover {
+  background: linear-gradient(360deg, rgba(42, 44, 48, 0.779) 25%, rgba(70, 73, 81, 0.779) 65%);
+  position: relative;
+  box-shadow: -6px 7px 9px rgb(24, 24, 24);
+  z-index: 1; /* Διασφαλίζει ότι το κείμενο είναι πάνω από το gradient */
+  overflow: hidden; /* Κρύβει τα τυχόν εκτός ορίων στοιχεία */
+  filter:brightness(100%);
+  }
 }
 
 .sidebarRegion__23e6b {
   max-width: 300px;
-
   .sidebarRegionScroller__23e6b {
-    justify-content: flex-start;
-
-    .sidebar__23e6b {
-      width: 300px;
-      padding: 15px 0 7px 15px;
-
-      .item_b3f026 {
-        padding: 8px 10px;
-        border-radius: 15px;
-
-        &.selected_b3f026 {
-
-         background: var(--Card-Boxes-Color); 
-         position: relative;
-         box-shadow: -7px 5px 12px rgba(0, 0, 0, 0.584);
-         z-index: 1; /* Διασφαλίζει ότι το κείμενο είναι πάνω από το gradient */
-         overflow: hidden; /* Κρύβει τα τυχόν εκτός ορίων στοιχεία */
-         color: rgb(255, 255, 255);
-         backdrop-filter: blur(75px);
-         filter:brightness(107%);
-        }
-        
-        &.selected_b3f026:hover {
-         filter:brightness(100%);
-        }        
-        }
-        }
-    }
-
-  /* makes sidebar big, adds channel styling */
+  .item_b3f026 {
+  padding: 8px 10px;
+  border-radius: 15px;
+  }
+  }
+  &.selected_b3f026 {
+  background: var(--Card-Boxes-Color); 
+  position: relative;
+  box-shadow: -7px 5px 12px rgba(0, 0, 0, 0.584);
+  z-index: 1; /* Διασφαλίζει ότι το κείμενο είναι πάνω από το gradient */
+  overflow: hidden; /* Κρύβει τα τυχόν εκτός ορίων στοιχεία */
+  color: rgb(255, 255, 255);
+  backdrop-filter: blur(75px);
+  filter:brightness(107%);
+  }       
+  &.selected_b3f026:hover {
+  filter:brightness(100%);
+  }        
+}   
+ /* makes sidebar big, adds channel styling */
   .searchBar_c7e907 {
-    border-radius: 15px;
-    margin-right: 1px;
-    box-shadow: -7px 5px 12px rgba(0, 0, 0, 0.584);
-    background: var(--Card-Boxes-Color);   
-    }
+  border-radius: 15px;
+  margin-right: 1px;
+  box-shadow: -7px 5px 12px rgba(0, 0, 0, 0.584);
+  background: var(--Card-Boxes-Color);   
+  }
     
   .mask__68edb {
-    height: 100px;
-    contain: none;
-    overflow: visible;
-
-    [mask^="url(#uid_"] {
-      mask: none !important;
-
-      .banner__68edb {
-        width: 100vw;
-      }
-    }
+  height: 100px;
+  contain: none;
+  overflow: visible;
+  [mask^="url(#uid_"] {
+  mask: none !important;
+  .banner__68edb {
+  width: 100vw;
+  }
   }
 }
