--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -77,7 +77,7 @@
 }
 
 .sidebarRegion__23e6b {
-  &.selected_b3f026 {
+  .selected_b3f026 {
   background: var(--Card-Boxes-Color); 
   position: relative;
   box-shadow: -7px 5px 12px rgba(0, 0, 0, 0.584);
