--- a/new.css
+++ b/new.css
@@ -86,6 +86,10 @@
   --text-link: var(--link-colour);
 }
 
+.typeMacOS__421ed + .app_a3002d .layers__160d8 {
+  margin: var(--app-margin);
+}
+
 #app-mount .layer__960e4 {
   top: var(--window-padding);
   right: var(--window-padding);
