--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -1,9 +1,10 @@
+
 [class*="vc-settings-quickActions-pill"] {
   background: var(--Card-Boxes-Color);
   border-width: 1px;
   border-style: inset;
   border-radius: 10px;
-  box-shadow: -2px 5px 10px rgb(24, 24, 24);
+  box-shadow: -0px 2px 13px rgb(24, 24, 24);
   border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
   color:  white;
 }
@@ -12,7 +13,7 @@
   border-width: 1px;
   border-style: inset;
   border-radius: 10px;
-  box-shadow: -2px 5px 10px rgb(24, 24, 24);
+  box-shadow: -0px 2px 13px rgb(24, 24, 24);
   border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
   color:  white;
 }
@@ -22,7 +23,7 @@
   border-width: 1px;
   border-style: inset;
   border-radius: 10px;
-  box-shadow: -2px 5px 10px rgb(24, 24, 24);
+  box-shadow: -0px 2px 13px rgb(24, 24, 24);
   border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
   color:  white;
 }
@@ -32,7 +33,7 @@
   border-width: 1px;
   border-style: inset;
   border-radius: 10px;
-  box-shadow: -2px 5px 10px rgb(24, 24, 24);
+  box-shadow: -0px 2px 13px rgb(24, 24, 24);
   border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
   color:  white;
 }
@@ -41,7 +42,7 @@
   background: var(--Card-Boxes-Color);
   border-width: 1px;
   border-style: inset;
-  box-shadow: -2px 5px 10px rgb(24, 24, 24);
+  box-shadow: -0px 2px 13px rgb(24, 24, 24);
   border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
   color:  white;
 }
@@ -50,7 +51,7 @@
   background: var(--Card-Boxes-Color);
   border-width: 1px;
   border-style: inset;
-  box-shadow: -2px 5px 10px rgb(24, 24, 24);
+  box-shadow: -0px 2px 13px rgb(24, 24, 24);
   border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
   color:  white;
 }
@@ -83,10 +84,10 @@
   position: relative;
   width: 260px;
   border-radius: 15px;
-  box-shadow: 0px 0px 15px rgba(0, 231, 169);
+  box-shadow: 0px 0px 10px rgba(0, 231, 169);
   z-index: 1; /* Διασφαλίζει ότι το κείμενο είναι πάνω από το gradient */
   overflow: hidden; /* Κρύβει τα τυχόν εκτός ορίων στοιχεία */
-  color: rgb(255, 255, 255);
+  color: rgb(0, 231, 169);
   backdrop-filter: blur(75px);
   filter:brightness(107%);
   }       
@@ -99,7 +100,7 @@
   border-radius: 15px;
   width: 260px;
   margin-right: 1px;
-  box-shadow: 0px 0px 15px rgb(255, 255, 255);
+  box-shadow: 0px 0px 10px rgb(255, 255, 255);
   background: var(--Card-Boxes-Color);   
   }
     
@@ -117,7 +118,7 @@
 
 [class*="item__58105"] {
     background-color: rgb(255, 255, 255);
-    box-shadow: 0 0 11px rgba(255, 255, 255, 0.8); /* Green glow */
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.8); /* White glow */
 }
 
 .pill_e5445c {
@@ -131,7 +132,7 @@
     right: 68px;
     height: 57px !important;  
     background-color: rgb(0, 231, 169);
-    width: 100px;
+    width: 90px;
     border-radius: 0% 20% 20% 0%;
-    box-shadow: 0 0 11px rgba(0, 231, 169); /* Glowing effect */
+    box-shadow: 0 0 10px rgba(0, 231, 169, 0.735); /* Glowing effect */
 }
