--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -6,7 +6,7 @@
   border-radius: 10px;
   box-shadow: -0px 2px 13px rgb(24, 24, 24);
   border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
-  color:  white;
+  color:  var(--text-color);
 }
 [class*="vc-addon-card"] {
   background: var(--Card-Boxes-Color);
@@ -25,7 +25,7 @@
   border-radius: 10px;
   box-shadow: -0px 2px 13px rgb(24, 24, 24);
   border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
-  color:  white;
+  color:  var(--text-color);
 }
 
 [class*="vc-settings-tab-bar top_b3f026"] {
@@ -35,7 +35,7 @@
   border-radius: 10px;
   box-shadow: -0px 2px 13px rgb(24, 24, 24);
   border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
-  color:  white;
+  color:  var(--text-color);
 }
 
 [class*="vc-plugins-info-card cardPrimary__73069 card__73069"] {
@@ -44,7 +44,7 @@
   border-style: inset;
   box-shadow: -0px 2px 13px rgb(24, 24, 24);
   border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
-  color:  white;
+  color:  var(--text-color);
 }
 
 .theme-dark .button__201d5.lookFilled__201d5.colorBrand__201d5, .theme-dark .button__201d5.lookFilled__201d5.colorGreen__201d5, .theme-dark .button__201d5.lookFilled__201d5.colorBrandNew__8872c {
@@ -53,7 +53,7 @@
   border-style: inset;
   box-shadow: -0px 2px 13px rgb(24, 24, 24);
   border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
-  color:  white;
+  color:  var(--text-color);
 }
 /* Channels Color */
 .modeSelected__2ea32 a.link__2ea32,
