--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -100,7 +100,7 @@
   box-shadow: 0px 0px 10px var(--box-shadows);
   z-index: 1; /* Διασφαλίζει ότι το κείμενο είναι πάνω από το gradient */
   overflow: hidden; /* Κρύβει τα τυχόν εκτός ορίων στοιχεία */
-  color: rgb(0, 231, 169);
+  color: var(--box-shadows);
   backdrop-filter: blur(75px);
   filter:brightness(107%);
   }       
