--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -144,8 +144,8 @@
 .pill_e5445c [style="opacity: 1; height: 40px; transform: none;"] {
     right: 68px;
     height: 57px !important;  
-    background-color: rgb(0, 231, 169);
+    background-color: var(--box-shadows);
     width: 90px;
     border-radius: 0% 20% 20% 0%;
-    box-shadow: 0 0 10px rgba(0, 231, 169, 0.735); /* Glowing effect */
+    box-shadow: 0 0 10px var(--box-shadows), 0.735; /* Glowing effect */
 }
