--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -1,4 +1,5 @@
 
+
 [class*="vc-settings-quickActions-pill"] {
   background: var(--Card-Boxes-Color);
   border-width: 1px;
@@ -25,7 +26,7 @@
   border-radius: 10px;
   box-shadow: -0px 2px 13px rgb(24, 24, 24);
   border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
-  color:  var(--text-color);
+  color:  var(--common-text-color);
 }
 
 [class*="vc-settings-tab-bar top_b3f026"] {
@@ -35,7 +36,7 @@
   border-radius: 10px;
   box-shadow: -0px 2px 13px rgb(24, 24, 24);
   border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
-  color:  var(--text-color);
+  color:  var(--common-text-color);
 }
 
 [class*="vc-plugins-info-card cardPrimary__73069 card__73069"] {
@@ -44,7 +45,7 @@
   border-style: inset;
   box-shadow: -0px 2px 13px rgb(24, 24, 24);
   border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
-  color:  var(--text-color);
+  color:  var(--common-text-color);
 }
 
 .theme-dark .button__201d5.lookFilled__201d5.colorBrand__201d5, .theme-dark .button__201d5.lookFilled__201d5.colorGreen__201d5, .theme-dark .button__201d5.lookFilled__201d5.colorBrandNew__8872c {
@@ -53,7 +54,7 @@
   border-style: inset;
   box-shadow: -0px 2px 13px rgb(24, 24, 24);
   border-color: rgba(16, 48, 113, 0.016) rgba(255, 255, 255, 0.08) rgba(0, 0, 0, 0.4);
-  color:  var(--text-color);
+  color:  var(--common-text-color);
 }
 /* Channels Color */
 .modeSelected__2ea32 a.link__2ea32,
