--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -1,5 +1,12 @@
-
-
+/* Add custom home icon */
+div[data-list-item-id="guildsnav___home"] {
+	background: var(--home-image) top center/110% no-repeat;
+}
+/* Revome discord home icon */
+#app-mount [data-list-item-id="guildsnav___home"]>div {
+	color: transparent;
+	background-color: transparent;
+}
 
 [class*="vc-addon-card"] {
   background: var(--Card-Boxes-Color);
