--- a/ThemeLite.css
+++ b/ThemeLite.css
@@ -1,3 +1,26 @@
+ /* Side bar in settings */
+.sidebarRegion__23e6b {
+  max-width: 300px;
+  border-radius: 15px;
+  .sidebarRegionScroller__23e6b {
+  .item_b3f026 {
+  padding: 8px 10px;
+  border-radius: 15px;
+} 
+.sidebar__23e6b {
+    width: 300px;
+    padding: 15px 0 7px 15px;
+}
+}
+}
+[class*="contentColumn"] {
+  max-width: 1300px;
+}
+
+[class*="tabBarPanel_f8303a tabPanel__2666b"] {
+  max-width: 600px;
+}
+
 /* Add custom home icon */
 div[data-list-item-id="guildsnav___home"] {
 	background: var(--home-image) top center/110% no-repeat;
